Fixed footer spacing

--- a/src/style/components/footer.css
+++ b/src/style/components/footer.css
@@ -12,7 +12,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 50px 0;
+    padding: 50px;
 }
 
 #footer-statement-1 {
@@ -55,5 +55,6 @@ footer {
 @media screen and (max-width: 1000px) {
     .footer-statements {
         text-align: center;
+        padding: 10px;
     }
 }
